k8s/apps/vikunja/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: apps
  labels:
    app: vikunja
spec:
  replicas: 0
  selector:
    matchLabels:
      app: vikunja
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
        - name: vikunja
          image: vikunja/vikunja:latest
          ports:
            - containerPort: 3456
          volumeMounts:
            - name: data
              mountPath: /app/vikunja/files
          resources:
            requests:
              memory: "64Mi"
              cpu: "25m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vikunja-pvc
