k8s/apps/vikunja/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja-svc
  namespace: apps
  labels:
    app: vikunja
spec:
  selector:
    app: vikunja
  ports:
    - port: 3456
      targetPort: 3456
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: tasks.marco-sr.duckdns.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja-svc
                port:
                  number: 3456
